use PxPay folder

--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,9 @@
         "bin-dir": "bin"
     },
     "autoload": {
-        "psr-0": { "Payum\\Skeleton": "" }
+        "psr-0": { "Payum\\PxPay": "" }
     },
-    "target-dir": "Payum/Skeleton",
+    "target-dir": "Payum/PxPay",
     "extra": {
         "branch-alias": {
             "dev-master": "1.5-dev"
