--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "bin-dir": "bin"
     },
     "autoload": {
-        "psr-0": { "Cognito\\Payum\\PxPay\\": "" }
+        "psr-0": { "Cognito\\PxPay\\": "" }
     },
     "extra": {
         "branch-alias": {
